--- a/css/configStyle.css
+++ b/css/configStyle.css
@@ -45,6 +45,13 @@
 	padding: 15px;
 }
 
+#colorPickerTools {
+	margin-top: 5px;
+}
+#colorPickerTools td {
+	padding: 5px;
+}
+
 .Black {
 	background-color: Black;
 	border: 0;
@@ -108,6 +115,10 @@
 .Navy {
 	background-color: Navy;
 	border: 0;
+}
+.Eraser {
+	background-color: rgb(235, 255, 255);
+	border: 2px solid black;
 }
 
 .colorBlock {
